fix: css grid-gap属性不存在,使用gap属性

--- a/style.scss
+++ b/style.scss
@@ -49,7 +49,7 @@ body.no-webp {
     grid-auto-flow: column; 
     grid-template-columns: repeat(2, 1fr); 
     grid-template-rows: repeat(3, 72px); 
-    grid-gap: 9px;
+    gap: 9px;
     
     .card-header {
       grid-area: 1 / 1 / 2 / -1;
